--- a/DBDeploymentSanityCheck/pom.xml
+++ b/DBDeploymentSanityCheck/pom.xml
@@ -119,6 +119,17 @@
             <artifactId>xmlunit</artifactId>
             <version>1.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>3.2.9.RELEASE</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
 
     </dependencies>
 
